# tower-lsp-server

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: ci.yml  rust.yml
examples/: custom_notification.rs  stdio.rs  tcp.rs  websocket.rs
examples/common/: lsp.rs
src/: codec.rs  jsonrpc.rs  lib.rs  lsp_extensions.rs  server.rs  service.rs  transport.rs  uri_ext.rs
src/jsonrpc/: error.rs  request.rs  response.rs  router.rs
src/lsp_extensions/: complete_item.rs  notifications.rs  text_document_content.rs
src/service/: client.rs  layers.rs  pending.rs  state.rs
src/service/client/: pending.rs  progress.rs  socket.rs
