[package]
name = "tower-lsp-server"
version = "0.23.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2024"
description = "Language Server Protocol implementation based on Tower"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tower-lsp-community/tower-lsp-server"
repository = "https://github.com/tower-lsp-community/tower-lsp-server"
documentation = "https://docs.rs/tower-lsp-server/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]
rust-version = "1.85"

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]
proposed = ["ls-types/proposed"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
bytes = "1"
dashmap = "6"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1"
ls-types = "0.0"
memchr = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tokio = { version = "1", optional = true }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.32", features = ["tokio-runtime"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.3"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"

# As of right now, ls_types has no prelude
wildcard_imports = "allow"
