[workspace.package]
authors = [
	"Eyal Kalderon <ebkalderon@gmail.com>",
	"Decodertalkers <aakari@tutanota.com>",
]
edition = "2024"
description = "Language Server Protocol implementation based on Tower"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/neocmakelsp/tower-lsp-f"
repository = "https://github.com/neocmakelsp/tower-lsp-f"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]

[package]
name = "tower-lsp-f"
version = "0.25.0-beta1"
authors.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation based on Tower"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tower-lsp/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
auto_impl = "1"
bytes = "1"
dashmap = "6"
futures = { version = "0.3", default-features = false, features = [
	"std",
	"async-await",
] }
httparse = "1"
lsp-types = { package = "gen-lsp-types", version = "=0.5.0", features = [
	"url",
] }
memchr = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tokio = { version = "1", optional = true }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.34", features = ["tokio-runtime"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = [
	"io-util",
	"io-std",
	"macros",
	"rt-multi-thread",
] }
tracing-subscriber = "0.3"
ws_stream_tungstenite = { version = "0.15", features = ["tokio_io"] }
